package sample;

public enum DFSLevel {
    NONE, //未被搜索过
    LOW, //浅搜索，即往下一级搜索过
    HIGH //深搜索，即往下两级以上搜索过
}
